--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/stack": "^5.7.1",
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-safe-area-context": "^3.1.1",
     "react-navigation": "^4.4.0",
+    "react-navigation-stack": "^2.8.2",
     "reactotron-react-native": "^5.0.0",
     "styled-components": "^5.1.1"
   },
@@ -34,6 +38,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-native": "^3.8.1",
     "jest": "^26.1.0",
+    "json-server": "^0.16.1",
     "metro-react-native-babel-preset": "^0.61.0",
     "react-test-renderer": "16.13.1"
   },
