--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "reactotron-react-native": "^5.0.0",
